--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,4 +2,5 @@ deploy.ant.properties.file=C:\\Users\\charl\\AppData\\Roaming\\NetBeans\\14\\tom
 j2ee.server.domain=C:/apache_catalina_base_10.1.13
 j2ee.server.home=C:/apache-tomcat-10.1.13
 j2ee.server.instance=tomcat90:home=C:\\apache-tomcat-10.1.13:base=C:\\apache_catalina_base_10.1.13
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\charl\\AppData\\Roaming\\NetBeans\\14\\build.properties
